@@ -10,6 +10,7 @@ SVN
                Fix the timestamp decoding
   i2cdump: Fix I2C block mode error code
            Remove man page reference to hardware monitoring chips
+           Let the user specify a register range
   i2cset: Final status messages go to stdout
           Return success even when readback fails or doesn't match
   i2c-stub-from-dump: New helper script to use with i2c-stub
